// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`projectsReducer reducer should CHANGE_PROJECT_STATUS_FAIL 1`] = `
Object {
  "error": "test",
  "filteredProjects": Object {},
  "filteredShoppingLists": Array [],
  "isFiltering": false,
  "isLoading": true,
  "itemAddedToProject": Object {
    "added": false,
    "projectId": null,
  },
  "projects": Object {
    "active": Object {
      "myProjects": Array [
        Object {},
      ],
      "sharedProjects": Array [],
    },
    "archived": Object {
      "myProjects": Array [],
      "sharedProjects": Array [],
    },
    "preAuthProjects": Array [],
  },
  "shoppingLists": Array [
    Object {
      "project": Object {
        "id": 0,
      },
      "shoppingLists": Array [],
    },
  ],
}
`;

exports[`projectsReducer reducer should CHANGE_PROJECT_STATUS_SUCCESS 1`] = `
Object {
  "error": "",
  "filteredProjects": Object {},
  "filteredShoppingLists": Array [],
  "isFiltering": false,
  "isLoading": true,
  "itemAddedToProject": Object {
    "added": false,
    "projectId": null,
  },
  "projects": Object {
    "active": Object {
      "myProjects": Array [],
      "sharedProjects": Array [],
    },
    "archived": Object {
      "myProjects": Array [],
      "sharedProjects": Array [],
    },
    "preAuthProjects": Array [],
  },
  "shoppingLists": Array [
    Object {
      "project": Object {
        "id": 0,
      },
      "shoppingLists": Array [],
    },
  ],
}
`;

exports[`projectsReducer reducer should CREATE_PROJECT_WITH_DEFAULT_GROUP_SUCCESS 1`] = `
Object {
  "error": "",
  "filteredProjects": Object {},
  "filteredShoppingLists": Array [],
  "isFiltering": false,
  "isLoading": true,
  "itemAddedToProject": Object {
    "added": false,
    "projectId": null,
  },
  "projects": Object {
    "active": Object {
      "myProjects": Array [
        Object {},
      ],
      "sharedProjects": Array [],
    },
    "archived": Object {
      "myProjects": Array [],
      "sharedProjects": Array [],
    },
    "preAuthProjects": Array [],
  },
  "shoppingLists": Array [
    Object {},
    Object {
      "project": Object {
        "id": 0,
      },
      "shoppingLists": Array [],
    },
  ],
}
`;

exports[`projectsReducer reducer should DELETE_PROJECT_TEAM_MEMBER_SUCCESS 1`] = `
Object {
  "error": "",
  "filteredProjects": Object {},
  "filteredShoppingLists": Array [],
  "isFiltering": false,
  "isLoading": true,
  "itemAddedToProject": Object {
    "added": false,
    "projectId": null,
  },
  "projects": Object {
    "active": Object {
      "myProjects": Array [],
      "sharedProjects": Array [],
    },
    "archived": Object {
      "myProjects": Array [],
      "sharedProjects": Array [],
    },
    "preAuthProjects": Array [],
  },
  "shoppingLists": Array [
    Object {
      "project": Object {
        "id": 0,
      },
      "shoppingLists": Array [],
    },
  ],
}
`;

exports[`projectsReducer reducer should ITEM_ADDED_TO_PROJECT 1`] = `
Object {
  "error": "",
  "filteredProjects": Object {},
  "filteredShoppingLists": Array [],
  "isFiltering": false,
  "isLoading": true,
  "itemAddedToProject": Object {
    "added": true,
    "projectId": 0,
  },
  "projects": Object {
    "active": Object {
      "myProjects": Array [
        Object {},
      ],
      "sharedProjects": Array [],
    },
    "archived": Object {
      "myProjects": Array [],
      "sharedProjects": Array [],
    },
    "preAuthProjects": Array [],
  },
  "shoppingLists": Array [
    Object {
      "project": Object {
        "id": 0,
      },
      "shoppingLists": Array [],
    },
  ],
}
`;

exports[`projectsReducer reducer should LOADING_PROJECTS 1`] = `
Object {
  "aggregateData": Object {},
  "error": "",
  "filteredProjects": Object {},
  "filteredShoppingLists": Array [],
  "isFiltering": false,
  "isLoading": true,
  "itemAddedToProject": Object {
    "added": false,
    "projectId": null,
  },
  "loadingShoppingLists": true,
  "projects": Object {
    "active": Object {
      "invitedProjects": Array [],
      "myProjects": Array [],
      "sharedProjects": Array [],
    },
    "archived": Object {
      "invitedProjects": Array [],
      "myProjects": Array [],
      "sharedProjects": Array [],
    },
    "preAuthProjects": Array [],
  },
  "shoppingLists": Array [],
}
`;

exports[`projectsReducer reducer should LOADING_SHOPPING_LISTS 1`] = `
Object {
  "aggregateData": Object {},
  "error": "",
  "filteredProjects": Object {},
  "filteredShoppingLists": Array [],
  "isFiltering": false,
  "isLoading": true,
  "itemAddedToProject": Object {
    "added": false,
    "projectId": null,
  },
  "loadingShoppingLists": true,
  "projects": Object {
    "active": Object {
      "invitedProjects": Array [],
      "myProjects": Array [],
      "sharedProjects": Array [],
    },
    "archived": Object {
      "invitedProjects": Array [],
      "myProjects": Array [],
      "sharedProjects": Array [],
    },
    "preAuthProjects": Array [],
  },
  "shoppingLists": Array [],
}
`;

exports[`projectsReducer reducer should PROJECTS_SEARCH_FILTER 1`] = `
Object {
  "error": "",
  "filteredProjects": Object {},
  "filteredShoppingLists": Array [
    Object {
      "project": Object {
        "id": 0,
      },
      "shoppingLists": Array [],
    },
  ],
  "isFiltering": false,
  "isLoading": true,
  "itemAddedToProject": Object {
    "added": false,
    "projectId": null,
  },
  "projects": Object {
    "active": Object {
      "myProjects": Array [
        Object {},
      ],
      "sharedProjects": Array [],
    },
    "archived": Object {
      "myProjects": Array [],
      "sharedProjects": Array [],
    },
    "preAuthProjects": Array [],
  },
  "shoppingLists": Array [
    Object {
      "project": Object {
        "id": 0,
      },
      "shoppingLists": Array [],
    },
  ],
}
`;

exports[`projectsReducer reducer should RECEIVE_PROJECTS_FAIL 1`] = `
Object {
  "error": "Unable to retrieve projects.",
  "filteredProjects": Object {},
  "filteredShoppingLists": Array [],
  "isFiltering": false,
  "isLoading": false,
  "itemAddedToProject": Object {
    "added": false,
    "projectId": null,
  },
  "projects": Object {
    "active": Object {
      "myProjects": Array [],
      "sharedProjects": Array [],
    },
    "archived": Object {
      "myProjects": Array [],
      "sharedProjects": Array [],
    },
    "preAuthProjects": Array [],
  },
  "shoppingLists": Array [
    Object {
      "project": Object {
        "id": 0,
      },
      "shoppingLists": Array [],
    },
  ],
}
`;

exports[`projectsReducer reducer should RECEIVE_PROJECTS_SUCCESS 1`] = `
Object {
  "error": "",
  "filteredProjects": Object {},
  "filteredShoppingLists": Array [],
  "isFiltering": false,
  "isLoading": false,
  "itemAddedToProject": Object {
    "added": false,
    "projectId": null,
  },
  "projects": Object {
    "active": Object {
      "myProjects": Array [],
      "sharedProjects": Array [],
    },
    "archived": Object {
      "myProjects": Array [],
      "sharedProjects": Array [],
    },
    "preAuthProjects": Array [],
  },
  "shoppingLists": Array [
    Object {
      "project": Object {
        "id": 0,
      },
      "shoppingLists": Array [],
    },
  ],
}
`;

exports[`projectsReducer reducer should RESET_LOADING_FLAG 1`] = `
Object {
  "error": "",
  "filteredProjects": Object {},
  "filteredShoppingLists": Array [],
  "isFiltering": false,
  "isLoading": true,
  "itemAddedToProject": Object {
    "added": false,
    "projectId": null,
  },
  "projects": Object {
    "active": Object {
      "myProjects": Array [
        Object {},
      ],
      "sharedProjects": Array [],
    },
    "archived": Object {
      "myProjects": Array [],
      "sharedProjects": Array [],
    },
    "preAuthProjects": Array [],
  },
  "shoppingLists": Array [
    Object {
      "project": Object {
        "id": 0,
      },
      "shoppingLists": Array [],
    },
  ],
}
`;

exports[`projectsReducer reducer should RESET_SHOPPING_LISTS_EDITING_FLAG 1`] = `
Object {
  "error": "",
  "filteredProjects": Object {},
  "filteredShoppingLists": Array [],
  "isFiltering": false,
  "isLoading": true,
  "itemAddedToProject": Object {
    "added": false,
    "projectId": null,
  },
  "projects": Object {
    "active": Object {
      "myProjects": Array [
        Object {},
      ],
      "sharedProjects": Array [],
    },
    "archived": Object {
      "myProjects": Array [],
      "sharedProjects": Array [],
    },
    "preAuthProjects": Array [],
  },
  "shoppingLists": Array [
    Object {
      "project": Object {
        "id": 0,
      },
      "shoppingLists": Array [],
    },
  ],
}
`;

exports[`projectsReducer reducer should SAVE_PROJECT_FAIL 1`] = `
Object {
  "error": undefined,
  "filteredProjects": Object {},
  "filteredShoppingLists": Array [],
  "isFiltering": false,
  "isLoading": true,
  "itemAddedToProject": Object {
    "added": false,
    "projectId": null,
  },
  "projects": Object {
    "active": Object {
      "myProjects": Array [],
      "sharedProjects": Array [],
    },
    "archived": Object {
      "myProjects": Array [],
      "sharedProjects": Array [],
    },
    "preAuthProjects": Array [],
  },
  "shoppingLists": Array [
    Object {
      "project": Object {
        "id": 0,
      },
      "shoppingLists": Array [],
    },
  ],
}
`;

exports[`projectsReducer reducer should SAVE_PROJECT_SUCCESS 1`] = `
Object {
  "error": "",
  "filteredProjects": Object {},
  "filteredShoppingLists": Array [],
  "isFiltering": false,
  "isLoading": true,
  "itemAddedToProject": Object {
    "added": false,
    "projectId": null,
  },
  "projects": Object {
    "active": Object {
      "myProjects": Array [
        Array [],
      ],
      "sharedProjects": Array [],
    },
    "archived": Object {
      "myProjects": Array [],
      "sharedProjects": Array [],
    },
    "preAuthProjects": Array [],
  },
  "shoppingLists": Array [
    Object {
      "project": Object {
        "id": 0,
      },
      "shoppingLists": Array [],
    },
  ],
}
`;

exports[`projectsReducer reducer should SAVE_SHOPPING_LIST_FAIL 1`] = `
Object {
  "error": "Failed to save the group",
  "filteredProjects": Object {},
  "filteredShoppingLists": Array [],
  "isFiltering": false,
  "isLoading": true,
  "isSavingShoppingList": false,
  "itemAddedToProject": Object {
    "added": false,
    "projectId": null,
  },
  "projects": Object {
    "active": Object {
      "myProjects": Array [
        Object {},
      ],
      "sharedProjects": Array [],
    },
    "archived": Object {
      "myProjects": Array [],
      "sharedProjects": Array [],
    },
    "preAuthProjects": Array [],
  },
  "shoppingLists": Array [
    Object {
      "project": Object {
        "id": 0,
      },
      "shoppingLists": Array [],
    },
  ],
}
`;

exports[`projectsReducer reducer should SAVE_SHOPPING_LIST_SUCCESS 1`] = `
Object {
  "error": "",
  "filteredProjects": Object {},
  "filteredShoppingLists": Array [],
  "isFiltering": false,
  "isLoading": true,
  "isSavingShoppingList": false,
  "itemAddedToProject": Object {
    "added": false,
    "projectId": null,
  },
  "projects": Object {
    "active": Object {
      "myProjects": Array [
        Object {},
      ],
      "sharedProjects": Array [],
    },
    "archived": Object {
      "myProjects": Array [],
      "sharedProjects": Array [],
    },
    "preAuthProjects": Array [],
  },
  "shoppingLists": Array [
    Object {
      "project": Object {
        "id": 0,
      },
      "shoppingLists": Array [
        Object {
          "projectId": 0,
        },
      ],
    },
  ],
}
`;

exports[`projectsReducer reducer should SAVING_SHOPPING_LIST 1`] = `
Object {
  "error": "",
  "filteredProjects": Object {},
  "filteredShoppingLists": Array [],
  "isFiltering": false,
  "isLoading": true,
  "isSavingShoppingList": true,
  "itemAddedToProject": Object {
    "added": false,
    "projectId": null,
  },
  "projects": Object {
    "active": Object {
      "myProjects": Array [
        Object {},
      ],
      "sharedProjects": Array [],
    },
    "archived": Object {
      "myProjects": Array [],
      "sharedProjects": Array [],
    },
    "preAuthProjects": Array [],
  },
  "shoppingLists": Array [
    Object {
      "project": Object {
        "id": 0,
      },
      "shoppingLists": Array [],
    },
  ],
}
`;

exports[`projectsReducer reducer should SIGN_USER_OUT 1`] = `
Object {
  "aggregateData": Object {},
  "error": "",
  "filteredProjects": Object {},
  "filteredShoppingLists": Array [],
  "isFiltering": false,
  "isLoading": true,
  "itemAddedToProject": Object {
    "added": false,
    "projectId": null,
  },
  "loadingShoppingLists": true,
  "projects": Object {
    "active": Object {
      "invitedProjects": Array [],
      "myProjects": Array [],
      "sharedProjects": Array [],
    },
    "archived": Object {
      "invitedProjects": Array [],
      "myProjects": Array [],
      "sharedProjects": Array [],
    },
    "preAuthProjects": Array [],
  },
  "shoppingLists": Array [],
}
`;

exports[`projectsReducer reducer should UPDATE_PROJECT_SUCCESS 1`] = `
Object {
  "error": "",
  "filteredProjects": Object {},
  "filteredShoppingLists": Array [],
  "isFiltering": false,
  "isLoading": true,
  "itemAddedToProject": Object {
    "added": false,
    "projectId": null,
  },
  "projects": Object {
    "active": Object {
      "myProjects": Array [
        Object {},
      ],
      "sharedProjects": Array [],
    },
    "archived": Object {
      "myProjects": Array [],
      "sharedProjects": Array [],
    },
    "preAuthProjects": Array [],
  },
  "shoppingLists": Array [
    Object {
      "project": Object {
        "id": 0,
      },
      "shoppingLists": Array [],
    },
  ],
}
`;

exports[`projectsReducer reducer should UPDATE_PROJECTS_FILTER 1`] = `
Object {
  "error": "",
  "filteredProjects": Object {
    "active": Object {
      "myProjects": Array [
        Object {},
      ],
      "sharedProjects": Array [],
    },
    "archived": Object {
      "myProjects": Array [],
      "sharedProjects": Array [],
    },
  },
  "filteredShoppingLists": Array [],
  "isFiltering": false,
  "isLoading": true,
  "itemAddedToProject": Object {
    "added": false,
    "projectId": null,
  },
  "projects": Object {
    "active": Object {
      "myProjects": Array [
        Object {},
      ],
      "sharedProjects": Array [],
    },
    "archived": Object {
      "myProjects": Array [],
      "sharedProjects": Array [],
    },
    "preAuthProjects": Array [],
  },
  "shoppingLists": Array [
    Object {
      "project": Object {
        "id": 0,
      },
      "shoppingLists": Array [],
    },
  ],
}
`;

exports[`projectsReducer reducer should return initialState 1`] = `
Object {
  "aggregateData": Object {},
  "error": "",
  "filteredProjects": Object {},
  "filteredShoppingLists": Array [],
  "isFiltering": false,
  "isLoading": true,
  "itemAddedToProject": Object {
    "added": false,
    "projectId": null,
  },
  "loadingShoppingLists": true,
  "projects": Object {
    "active": Object {
      "invitedProjects": Array [],
      "myProjects": Array [],
      "sharedProjects": Array [],
    },
    "archived": Object {
      "invitedProjects": Array [],
      "myProjects": Array [],
      "sharedProjects": Array [],
    },
    "preAuthProjects": Array [],
  },
  "shoppingLists": Array [],
}
`;
